--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.rocky</groupId>
-	<artifactId>springboot-quick-web</artifactId>
+	<artifactId>real-estate-monitor</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>boot-helloworld</name>
-	<description>Demo project for Spring Boot</description>
+	<name>real-estate-monitor</name>
+	<description></description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -68,6 +68,30 @@
             <!--<artifactId>druid-spring-boot-starter</artifactId>-->
             <!--<version>1.1.0</version>-->
         <!--</dependency>-->
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.10</version>
+        </dependency>
+
+        <!--爬虫-->
+        <dependency>
+            <groupId>us.codecraft</groupId>
+            <artifactId>webmagic-core</artifactId>
+            <version>0.7.3</version>
+        </dependency>
+        <dependency>
+            <groupId>us.codecraft</groupId>
+            <artifactId>webmagic-extension</artifactId>
+            <version>0.7.3</version>
+        </dependency>
+
+        <!--代理ip-->
+        <dependency>
+            <groupId>com.virjar</groupId>
+            <artifactId>dungproxy-webmagic7</artifactId>
+            <version>0.0.3</version>
+        </dependency>
 
 
     </dependencies>
