--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,7 +1,7 @@
 #mysql
 spring:
     datasource:
-        url: jdbc:mysql://127.0.0.1:3307/hello?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+        url: jdbc:mysql://127.0.0.1:3307/estate?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
         username: root
         password: 123
         driver-class-name: com.mysql.jdbc.Driver
