--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8400
 spring:
   profiles:
-    active: dev
+    active: @spring.profiles.active@
 
   freemarker:
     cache: false
